--- a/asthetic/MainASTH.css
+++ b/asthetic/MainASTH.css
@@ -75,7 +75,11 @@ header {
 
 /* TeXT EDITOR  */
 
-
+.TextEDIT {
+    background-color: red;
+    height: 20px;
+    border:solid 0px 0px 2px 3px;
+}
 
 
 
