--- a/asthetic/MainASTH.css
+++ b/asthetic/MainASTH.css
@@ -101,7 +101,7 @@ header {
 .read {
     background-color: #fff;
     margin: 20px 70px;
-    text-align: center;
+    text-align: left;
     font-size:16px;
     padding: 20px 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
