--- a/asthetic/MainASTH.css
+++ b/asthetic/MainASTH.css
@@ -19,22 +19,22 @@ header {
     align-items: center;
     display: flex;
     justify-content: space-between;
-    .head-left {
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        color: #fff;
-        font-size: 2.5rem;
-        display: flex;
-        align-items: center;
-    }
 }
 
-.head-left span {
+header .head-left {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #fff;
+    font-size: 2.5rem;
+    display: flex;
+    align-items: center;
+}
+header .head-left span {
     font-size: 1.2rem;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px 12px 0px 12px;
 }
 
-.head-left a {
+.header .head-left a {
     color: red;
     text-decoration: none;
     font-size: 1.4rem;
