--- a/asthetic/MainASTH.css
+++ b/asthetic/MainASTH.css
@@ -19,13 +19,14 @@ header {
     align-items: center;
     display: flex;
     justify-content: space-between;
-    .head-left {
-        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        color: #fff;
-        font-size: 2.5rem;
-        display: flex;
-        align-items: center;
-    }
+    
+}
+header .head-left {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #fff;
+    font-size: 2.5rem;
+    display: flex;
+    align-items: center;
 }
 
 .head-left span {
